# CollisionHandle

./: CMakeLists.txt  octave-workspace
data/beam/: ball.ini  collision_ball.ini  collision_ball00.ini  collision_ball001.ini  collision_ball008.ini  collision_ball008h001.ini  collision_ball00h001.ini  collision_ball03.ini  collision_cone.ini  collision_dino.ini
data/beam-coarse/: ball.ini  collision_ball.ini  collision_cone.ini  collision_dino.ini  self_con.ini  selfcon.ini  test.ini  test_scene.ini
data/bunny/: cup.ini  one.ini  plane.ini  stair.ini
data/cube/: selfcon_2cube.ini  selfcon_2cube_ica.ini  selfcon_ica.ini  selfcon_ica2.ini  selfcon_mprgp.ini
data/dino/: ball.ini  ball_inside.ini  collision_ball.ini  cubes-test.ini  cubes.ini  cylinder.ini  plane.ini  selfcon.ini  stair.ini  test.ini
data/dragon/: bowel.ini  bowl.ini  plane.ini  plane1.ini  plane2.ini  plane3.ini  stair.ini  test_scene.ini
data/dragon_asia/: plane.ini  (+1 more)
doc/: MPRGP_LCP.tex
script/: rename.py  report_data.tex  run.sh  run2.sh
src/: ADIGroup.h  CMakeLists.txt  ClothCollision.cpp  ClothCollision.h  ClothMesh.cpp  ClothMesh.h  LinearConCollider.cpp  LinearConCollider.h  MoseckQPSolver.cpp  MprgpFemSolver.cpp  MprgpFemSolver.h  Simulator.cpp  Simulator.h  TetrahedronVertexCon.cpp  TetrahedronVertexCon.h  main.cpp
src/old/: MprgpFemSolver.back  MprgpFemSolver.cpp  MprgpFemSolver.h
test_case/: CMakeLists.txt  ConvergencyCompare.cpp  MoseckQPSolverTest.cpp  ResultsToObj.cpp  SimulatorTest.cpp  TestADI.cpp  VtkToAbq.cpp
test_case/test_data/beam-coarse/: collision_out_ball.ini
(+14 files in other folders)
